styled score and added comments

--- a/game/index.html
+++ b/game/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="Game Instructions">
-      <p>instructions</p>
+      <p>Choose your hand</p>
     </div>
 
     <div class="buttons">
