--- a/game/index.html
+++ b/game/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <header>
-      <h1>Rock Paper Scissors (Yaz's First Game)</h1>
+      <h1>Rock Paper Scissors Ver. 1.0</h1>
     </header>
 
     <div class="score-board">
@@ -21,7 +21,12 @@
     </div>
 
     <div class="Game Instructions">
-      <p>Choose your hand</p>
+      <p>Instructions</p>
+      <ol>
+        <li>Rock crushes scissors</li>
+        <li>Paper beats rock</li>
+        <li>Scissors beats paper</li>
+      </ol>
     </div>
 
     <div class="buttons">
